[gd_scene load_steps=12 format=2]

[ext_resource path="res://Maps/MainMap/Monitor.png" type="Texture" id=1]
[ext_resource path="res://UI/MainMenu.tres" type="Theme" id=2]
[ext_resource path="res://UI/ComputerScreen/ComputerScreen.gd" type="Script" id=3]
[ext_resource path="res://UI/ComputerScreen/BackArrow.png" type="Texture" id=4]
[ext_resource path="res://UI/ComputerScreen/Organisms/cerevisiae.PNG" type="Texture" id=5]
[ext_resource path="res://UI/ArialCE.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 46
outline_size = 1
use_mipmaps = true
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_mipmaps = true
use_filter = true
extra_spacing_bottom = 6
extra_spacing_char = 1
extra_spacing_space = 3
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=6]
resource_name = "Hide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Show"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="ComputerScreen" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 146.0
margin_top = 92.0
margin_right = -132.0
margin_bottom = -118.0
color = Color( 0.372549, 0.482353, 0.631373, 0.54902 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
texture = ExtResource( 1 )

[node name="GoBack" type="Button" parent="."]
margin_left = 225.0
margin_top = 169.0
margin_right = 482.0
margin_bottom = 269.0
theme = ExtResource( 2 )
text = "Go Back"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -436.0
margin_top = -912.0
margin_right = 181.0
margin_bottom = -796.0
rect_pivot_offset = Vector2( 504, 101 )
theme = ExtResource( 2 )
text = "DNA COMPUTER "

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 358.0
margin_top = -912.0
margin_right = 785.0
margin_bottom = -796.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 504, 101 )
theme = ExtResource( 2 )
text = "points"
align = 2

[node name="Points" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 459.0
margin_top = -912.0
margin_right = 543.0
margin_bottom = -796.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 33, 51 )
theme = ExtResource( 2 )
text = "1"
align = 2

[node name="PreviousButton" type="Button" parent="."]
margin_left = 198.0
margin_top = 346.0
margin_right = 324.0
margin_bottom = 882.0
theme = ExtResource( 2 )
icon = ExtResource( 4 )

[node name="NextButton" type="Button" parent="."]
margin_left = 1725.0
margin_top = 346.0
margin_right = 1851.0
margin_bottom = 882.0
rect_scale = Vector2( -1, 1 )
theme = ExtResource( 2 )
icon = ExtResource( 4 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 362.0
margin_top = 311.0
margin_right = 1562.0
margin_bottom = 911.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 0.741176 )

[node name="OrganismName" type="Label" parent="ColorRect3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -91.0
margin_top = -558.0
margin_right = 577.0
margin_bottom = -421.0
rect_pivot_offset = Vector2( 337, 104 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Henneguya salminicola (parasite): "
autowrap = true

[node name="OrganismDescription" type="Label" parent="ColorRect3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -410.0
margin_right = 578.0
margin_bottom = -147.0
rect_pivot_offset = Vector2( 345, 95 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Resistance to microgravity in space. Hyperactivity leads to high blood pressure. It may cause stroke and heart attack."
autowrap = true

[node name="OrganismPrice" type="Label" parent="ColorRect3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -550.0
margin_top = -192.0
margin_right = 550.0
margin_bottom = -147.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Organism price: 10 points"
align = 1
autowrap = true

[node name="TextureRect2" type="TextureRect" parent="ColorRect3"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 43.0
margin_top = -268.0
margin_right = 443.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 196, 204 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -550.0
margin_top = -130.0
margin_right = 550.0
margin_bottom = -30.0
custom_constants/separation = 30

[node name="GetTraitsButton" type="Button" parent="ColorRect3/HBoxContainer"]
margin_right = 535.0
margin_bottom = 100.0
size_flags_horizontal = 3
text = "Get Traits"

[node name="ExploreButton" type="Button" parent="ColorRect3/HBoxContainer"]
margin_left = 565.0
margin_right = 1100.0
margin_bottom = 100.0
size_flags_horizontal = 3
text = "Explore organism "

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hide = SubResource( 6 )
anims/RESET = SubResource( 4 )
anims/Show = SubResource( 5 )

[connection signal="pressed" from="GoBack" to="." method="_on_GoBack_pressed"]
[connection signal="pressed" from="PreviousButton" to="." method="_on_PreviousButton_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="ColorRect3/HBoxContainer/GetTraitsButton" to="." method="_on_GetTraitsButton_pressed"]
[connection signal="pressed" from="ColorRect3/HBoxContainer/ExploreButton" to="." method="_on_ExploreButton_pressed"]
